CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.0        |
+-----------------------+
BUGFIXES

IMPROVEMENTS
10-07-05    Implemented accessibility enhancements for navigation (Michael Heuberger)
10-07-05    Big naming cleanup in CSS as per RFC (Riccardo Magliocchetti)

+-----------------------+
| VERSION: 0.4.7        |
+-----------------------+
BUGFIXES
16-09-05    Fixed a nasty bug where requesting an article ID that didn't exist caused
            an infinite Flexy loop
15-09-05    Html title element value is now correctly drawn from the current article 
            title, or the section name if none exists

IMPROVEMENTS
26-09-05    Added optimize/analyse tables to maintenance module  (Lorenzo Alberton)
23-09-05    After failed perms logout, you now get redirected to correct page
            (Rares Benea)
23-09-05    Rewrote RssMgr with XML_Serializer support, data-driven rather than
            template driven
20-09-05    Chinese language update (Finjon Kiang)
14-09-05    Unit test runner added, currently works with pear-installable version of
            SimpleTest, many thanks to m3 Media Services Limited for granting us the
            right to distribute this under BSD (http://www.m3.net/)

+-----------------------+
| VERSION: 0.4.6        |
+-----------------------+
BUGFIXES
14-09-05    Fixed missing bug icon in msie
14-09-05    Fixed bug where new sequences for pgsql were correctly created but existing 
            ones weren't updated when triggering the "Rebuild Sequences Now"
            action in the Maintenance Mgr (Lorenzo Alberton)
13-09-05    Disabled FK constraints from MySQL as there appears to be a bug
            in the implementation.  Same SQL works fine in PgSQL ;-)
13-09-05    Fixed bug where prefs where not being correctly added for new
            registrants
09-09-05    Fixed a bug where non-indexed arrays could be overwritten
            (Lorenzo Alberton)