@@ -1,21 +1,7 @@
-<script type='text/javascript'>
-//<![CDATA[
-<!--
-    function DoAttach()
-    {
-        if (document.uploadAsset.assetFile.value==""){
-            alert('you must select a file to upload');
-        return false;
-        }
-    }
-//-->
-//]]>
-</script>
-
 <h1 class="pageTitle">{translate(#New Article#)}</h1>
 <form method="post" name="article" flexy:ignore id="article">
-    <input type="hidden" name="action" value="insert" /> 
-    <input type="hidden" name="frmCatID" value="{catID}" /> 
+    <input type="hidden" name="action" value="insert" />
+    <input type="hidden" name="frmCatID" value="{catID}" />
     <input type="hidden" name="frmCreatedByID" value="{loggedOnUserID}" />
 
     <table class="wide">
@@ -55,7 +41,7 @@
         <tr>
             <td width="100%" colspan="2" align="center" nowrap="nowrap">
                 <input class="wideButton" type="submit" value="{translate(#Save#)}" />
-                <input class="wideButton" type="button" value="{translate(#Cancel#)}" 
+                <input class="wideButton" type="button" value="{translate(#Cancel#)}"
                     onclick="javascript:document.location.href='{makeUrl(##,#article#,#publisher#)}'" />
             </td>
         </tr>
