@@ -1,54 +1,61 @@
+<div id="alertNotFinished" class="hide">{translate(#Please wait until upload is finished#)}</div>
+<div id="alertNoFile" class="hide">{translate(#You must select a file to upload#)}</div>
+<div id="alertPleaseWait" class="hide">{translate(#Please wait while document uploads#)}</div>
 <script type='text/javascript'>
 //<![CDATA[
 <!--
+    /* alert messages: */
+    var alertNotFinished    = document.getElementById('alertNotFinished').innerHTML;
+    var alertNoFile         = document.getElementById('alertNoFile').innerHTML;
+    var alertPleaseWait     = document.getElementById('alertPleaseWait').innerHTML;
+
     function doAttach()
     {
         if (document.uploadAsset.assetFile.value==""){
-            alert('You must select a file to upload');
+            alert(alertNoFile);
         return false;
-        } else {//Launch uploading document message                
-            avoidDown()
-            msgUp()                    
+        } else {//Launch uploading document message
+            avoidDown();
+            msgUp();
         }
     }
 
     var cteTxti = '<table class="wide">'
                 + '<tr><td align="left" width="250" nowrap><span class="error">'
-                + 'Please wait while document uploads '
-    var cteTxtf = '<\/span><\/td><\/tr><\/table>'
-    var msgPts = ''
+                + alertPleaseWait;
+    var cteTxtf = '<\/span><\/td><\/tr><\/table>';
+    var msgPts  = '';
 
-    function msgUp() 
+    function msgUp()
     {
-            msgPts = msgPts.length > 7 ? '.' : msgPts + '.'
-            if (document.all)
-                uploadLayer.innerHTML = cteTxti + msgPts + cteTxtf
-            if (!document.all && getElementById())
-                document.getElementById("uploadLayer").innerHTML = cteTxti + msgPts + cteTxtf
-            idetifier = setTimeout("msgUp()",100);    
+            msgPts = (msgPts.length > 7) ? '.' : msgPts + '.';
+            uploadLayer = document.getElementById('uploadLayer');
+
+            uploadLayer.innerHTML = cteTxti + msgPts + cteTxtf;
+            idetifier = setTimeout('msgUp()',100);
     }
-    
+
     function avoidDown()
-    {    
-        document.onmousedown = document.onkeydown = function () {alert('{translate(#Please wait until upload is finished#)}')}    
+    {
+        document.onmousedown = document.onkeydown = function () {alert(alertNotFinished);}
     }
-    
+
 //-->
 //]]>
 </script>
 
 <form method="post" name="uploadAsset" enctype="multipart/form-data" action="" flexy:ignore id="uploadAsset">
-    {if:save} 
+    {if:save}
         <input type="hidden" name="action" value="insert" />
     {else:}
         <input type="hidden" name="action" value="add" />
-    {end:} 
-    <input type="hidden" name="frmDocumentCatID" value="{docCatID}" /> 
-    <input type="hidden" name="document[document_type_id]" value="{assetTypeID}" /> 
-    <input type="hidden" name="document[added_by]" value="{loggedOnUserID}" /> 
-    <input type="hidden" name="document[orig_name]" value="{assetFileName}" /> 
-    <input type="hidden" name="document[mime_type]" value="{assetFileType}" /> 
-    <input type="hidden" name="document[file_size]" value="{assetFileSize}" /> 
+    {end:}
+    <input type="hidden" name="frmDocumentCatID" value="{docCatID}" />
+    <input type="hidden" name="document[document_type_id]" value="{assetTypeID}" />
+    <input type="hidden" name="document[added_by]" value="{loggedOnUserID}" />
+    <input type="hidden" name="document[orig_name]" value="{assetFileName}" />
+    <input type="hidden" name="document[mime_type]" value="{assetFileType}" />
+    <input type="hidden" name="document[file_size]" value="{assetFileSize}" />
     <span flexy:if="msgGet()">{msgGet()}</span>
 
     <table class="wide">
@@ -118,8 +125,8 @@
 
         <tr>
             <td width="100%" colspan="2" align="center" nowrap="nowrap">
-                <input class="wideButton" type="submit" name="submit" value="{translate(#Upload#)}" onclick="return doAttach();" /> 
-                <input class="wideButton" type="button" value="{translate(#Cancel#)}" 
+                <input class="wideButton" type="submit" name="submit" value="{translate(#Upload#)}" onclick="return doAttach();" />
+                <input class="wideButton" type="button" value="{translate(#Cancel#)}"
                     onclick="javascript:document.location.href='{makeUrl(##,#document#,#publisher#)}'" />
                 <div id="uploadLayer" style="position:relative; left:10px; top:0px"></div>
             </td>
